<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cadastro.CadastroTwoActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingRight="20dp"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/logoImagem"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginStart="290dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/cadastro_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textColor="#000000"
                    android:textSize="26sp"
                    android:layout_marginTop="12dp"
                    style="@style/margin_default"
                    tools:layout_editor_absoluteX="39dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="111dp"
                android:layout_marginTop="42.5dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/voce"
                android:textColor="#000000"
                android:textSize="26sp" />

        </RelativeLayout>


    <LinearLayout
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_nome"
                android:textSize="15sp"
                android:layout_marginTop="26dp"
                app:layout_constraintTop_toBottomOf="@+id/cadastro_label"
                style="@style/margin_default"
                tools:ignore="MissingConstraints" />

            <EditText
                android:layout_height="36dp"
                android:id="@+id/et_name"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_cadastro"
                app:layout_constraintTop_toBottomOf="@+id/name_label"
                style="@style/width_et"/>


            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ocupacao"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/et_name"
                style="@style/margin_default"
                tools:ignore="MissingConstraints" />

            <EditText
                android:layout_height="36dp"
                android:id="@+id/et_ocupacao"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_cadastro"
                app:layout_constraintTop_toBottomOf="@+id/email_label"
                style="@style/width_et"/>

            <TextView
                android:id="@+id/pass_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cidade"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/et_email"
                style="@style/margin_default"
                tools:ignore="MissingConstraints" />

            <EditText
                android:layout_height="36dp"
                android:id="@+id/et_estado"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_cadastro"
                app:layout_constraintTop_toBottomOf="@+id/pass_label"
                style="@style/width_et"/>

    </LinearLayout>

            <Button
                android:layout_height="36dp"
                android:id="@+id/btn-cadatro-one"
                android:hint="@string/continuar"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black"
                android:layout_marginTop="50dp"
                style="@style/width_et"
                android:onClick="sendToNext"
                app:layout_constraintTop_toBottomOf="@id/et_senha"
                android:background="@drawable/btn_cadastro_blue"/>

            <Button
                android:layout_height="36dp"
                android:id="@+id/btn-cancelar"
                android:hint="@string/cancelar"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black"
                android:layout_marginTop="20dp"
                style="@style/width_et"
                android:onClick="backToPrevious"
                android:background="@drawable/btn_cancelar"/>





    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>



