<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">
    <LinearLayout

        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/logoImagem"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginStart="270dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/login_label"
            style="@style/margin_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="26sp"
            tools:layout_editor_absoluteX="39dp" />

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints">



            <LinearLayout
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingRight="40dp">


                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/email_label"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/body"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/width_et"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/input_cadastro"
                    android:paddingLeft="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/email_label" />

                <TextView
                    android:id="@+id/pass_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/senha_label"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/et_email"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/et_senha"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/input_cadastro"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/pass_label" />

                <TextView
                    android:id="@+id/caracteres"
                    style="@style/width_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/caracteres"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/et_senha"
                    tools:ignore="MissingConstraints" />
                <Button
                    android:id="@+id/btn-login"
                    android:layout_width="match_parent"
                    android:layout_marginTop="40dp"
                    android:layout_height="36dp"
                    android:background="@drawable/btn_cadastro_blue"
                    android:fontFamily="sans-serif-black"
                    android:hint="@string/continuar"
                    android:onClick="validarLogin"
                    android:textColorHint="#FFFFFF"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/body_two"
                    />


            </LinearLayout>


        </RelativeLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>