<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cadastro.CadastroThreeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingRight="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <ImageView
            android:id="@+id/logoImagem"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginStart="290dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/cadastro_label"
            style="@style/margin_default"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/foto"
            android:textColor="#000000"
            android:textSize="26sp"
            tools:layout_editor_absoluteX="39dp" />

        <LinearLayout
            android:id="@+id/box-image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="65dp"
            android:background="@drawable/quadrado"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/mini-box"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="168dp"
                android:background="#ffffff"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="1dp"
                    android:src="@drawable/ic_pen" />

            </LinearLayout>


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_camera"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="43dp"
                android:text="@string/carregar"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/buttons-layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn-cadatro-one"
                style="@style/width_et"
                android:layout_height="36dp"
                android:layout_marginTop="44dp"
                android:background="@drawable/btn_cadastro_blue"
                android:fontFamily="sans-serif-black"
                android:hint="@string/continuar"
                android:onClick="concluir"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn-cancelar"
                style="@style/width_et"
                android:layout_height="36dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_cancelar"
                android:fontFamily="sans-serif-black"
                android:hint="@string/cancelar"
                android:onClick="backToPrevious"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_jump"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="250dp"
                android:layout_marginTop="26dp"
                android:text="@string/pular"
                android:onClick="concluir"
                android:textColor="#717171"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="39dp" />


        </LinearLayout>


    </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>



